# acq-copilot

./: .env.example  .gitignore  README.md  V2_PLAN.md  acq_test.spec.ts  deploy-vps.sh  docker-compose.yml  package-lock.json  planning-test.spec.ts
.github/workflows/: ci.yml  deploy-frontend.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/app/: auth_deps.py  config.py  dependencies.py  main.py
apps/api/app/models/: database.py
apps/api/app/orchestration/: DELIVERY_SUMMARY.txt  ORCHESTRATION.md  README.md  STRUCTURE.md  __init__.py  answer_synthesizer.py  citations.py  example_usage.py  executor.py  guards.py  pipeline.py  planner.py  providers.py  router.py
apps/api/app/routers/: __init__.py  admin.py  auth.py  chat.py  compliance.py  igce.py  market_research.py  opportunities.py  planning.py  pricing.py  rag.py  regulatory.py  tools.py
apps/api/app/schemas/: common.py
apps/api/app/services/: audit.py  auth.py  cache.py  far_ingest.py
apps/api/app/tools/: __init__.py  base.py  bls_oews.py  compliance_checker.py  document_parse.py  ecfr.py  far_rag.py  federal_register.py  gsa_calc.py  gsa_perdiem.py  igce_builder.py  price_reasonableness.py  registry.py  regulations_gov.py  sam_opportunities.py  threshold_checker.py  usaspending.py  vehicle_recommender.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/components/: Providers.tsx
apps/web/src/lib/: api.ts  format.ts  store.ts
apps/web/src/types/: index.ts
apps/web/tests/: comprehensive.spec.ts
tests/: e2e.spec.ts
(+22 files in other folders)
